--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
     "date-fns": "^1.29.0",
     "element-react": "^1.4.25",
     "element-theme-default": "^1.4.13",
-    "react": "^16.6.3",
-    "react-dom": "^16.6.3",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.1",
-    "react-stripe-checkout": "^2.6.3"
+    "react-scripts": "^3.0.1",
+    "react-stripe-checkout": "^2.6.3",
+    "styled-components": "^4.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
