--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "^3.0.1",
     "react-stripe-checkout": "^2.6.3",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^0.87.3",
     "styled-components": "^4.3.2"
   },
   "scripts": {
